// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Login Page > should compile 1`] = `
<bc-login-form
  errormessage="[object Object]"
  pending="[object Object]"
  submitted="[object Object]"
>
  <mat-card>
    <mat-card-title>
      Login
    </mat-card-title>
    <mat-card-content>
      <form
        class="ng-untouched ng-pristine ng-valid"
        novalidate=""
      >
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="username"
              matinput=""
              placeholder="Username"
              type="text"
            />
          </mat-form-field>
        </p>
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="password"
              matinput=""
              placeholder="Password"
              type="password"
            />
          </mat-form-field>
        </p>
        
        <div
          class="login-buttons"
        >
          <button
            mat-button=""
            type="submit"
          >
            Login
          </button>
        </div>
      </form>
    </mat-card-content>
  </mat-card>
</bc-login-form>
`;

exports[`Login Page > should disable the form if pending 1`] = `
<bc-login-form
  errormessage="[object Object]"
  pending="[object Object]"
  submitted="[object Object]"
>
  <mat-card>
    <mat-card-title>
      Login
    </mat-card-title>
    <mat-card-content>
      <form
        class="ng-untouched ng-pristine"
        novalidate=""
      >
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine"
              disabled=""
              formcontrolname="username"
              matinput=""
              placeholder="Username"
              type="text"
            />
          </mat-form-field>
        </p>
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine"
              disabled=""
              formcontrolname="password"
              matinput=""
              placeholder="Password"
              type="password"
            />
          </mat-form-field>
        </p>
        
        <div
          class="login-buttons"
        >
          <button
            mat-button=""
            type="submit"
          >
            Login
          </button>
        </div>
      </form>
    </mat-card-content>
  </mat-card>
</bc-login-form>
`;

exports[`Login Page > should display an error message if provided 1`] = `
<bc-login-form
  errormessage="[object Object]"
  pending="[object Object]"
  submitted="[object Object]"
>
  <mat-card>
    <mat-card-title>
      Login
    </mat-card-title>
    <mat-card-content>
      <form
        class="ng-untouched ng-pristine ng-valid"
        novalidate=""
      >
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="username"
              matinput=""
              placeholder="Username"
              type="text"
            />
          </mat-form-field>
        </p>
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="password"
              matinput=""
              placeholder="Password"
              type="password"
            />
          </mat-form-field>
        </p>
        <p
          class="login-error"
        >
           Invalid credentials 
        </p>
        
        <div
          class="login-buttons"
        >
          <button
            mat-button=""
            type="submit"
          >
            Login
          </button>
        </div>
      </form>
    </mat-card-content>
  </mat-card>
</bc-login-form>
`;
